--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -108,6 +108,50 @@
   margin-left: 0.5rem;
 }
 
+.button {
+  width: 200px;
+  height: 30px;
+  background-color: #0070f3;
+  color: #fff;
+  border-radius: 5px;
+  border: transparent;
+  text-align: center;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+.button:hover {
+  background-color: #025ec6;
+}
+
+.input {
+  width: 200px;
+  height: 40px;
+  padding: 5px;
+  margin-bottom: 15px;
+  border: 1px solid #cfcfcf;
+  border-radius: 5px;
+  transition: color 0.15s ease, border-color 0.15s ease;
+  outline: none;
+}
+
+.input:hover {
+  border-color: #0070f3;
+}
+
+.link {
+  color: #0070f3;
+}
+
+.link:hover{
+  color: #025ec6;
+  text-decoration: underline;
+}
+
+.error {
+  color: rgb(215, 6, 6);
+}
+
 @media (max-width: 600px) {
   .grid {
     width: 100%;
